apps/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    app.kubernetes.io/managed-by: flux
