apps/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
spec:
  type: LoadBalancer
  selector:
    app: podinfo
  ports:
  - name: http
    port: 9898
    targetPort: 9898
